apps/web/crowdsec/blocklist-mirror-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  namespace: web
  name: crowdsec-lapi
spec:
  rules:
  - host: g4f-api.k8s.maxwlang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: *appname
            port:
              number: 1337
